crates/rome_js_formatter/tests/specs/prettier/typescript/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMixedWithModifiers.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
abstract class A {
    abstract foo_a();
    
    public abstract foo_b();
    protected abstract foo_c();
    private abstract foo_d();
    
    abstract public foo_bb();
    abstract protected foo_cc();
    abstract private foo_dd();
    
    abstract static foo_d();
    
    static abstract foo_e();
}```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -5,11 +5,11 @@
   protected abstract foo_c();
   private abstract foo_d();
 
-  public abstract foo_bb();
-  protected abstract foo_cc();
-  private abstract foo_dd();
+  abstract public foo_bb();
+  abstract protected foo_cc();
+  abstract private foo_dd();
 
-  static abstract foo_d();
+  abstract static foo_d();
 
   static abstract foo_e();
 }
```

# Output

```js
abstract class A {
  abstract foo_a();

  public abstract foo_b();
  protected abstract foo_c();
  private abstract foo_d();

  abstract public foo_bb();
  abstract protected foo_cc();
  abstract private foo_dd();

  abstract static foo_d();

  static abstract foo_e();
}
```


# Errors
```
error[SyntaxError]: 'private' cannot be used with 'abstract' modifier.
  ┌─ classAbstractMixedWithModifiers.ts:6:5
  │
6 │     private abstract foo_d();
  │     ^^^^^^^ -------- 'abstract' modifier

error[SyntaxError]: 'public' must precede 'abstract'
  ┌─ classAbstractMixedWithModifiers.ts:8:14
  │
8 │     abstract public foo_bb();
  │     -------- ^^^^^^ move this modifier
  │     │         
  │     before this modifier

error[SyntaxError]: 'protected' must precede 'abstract'
  ┌─ classAbstractMixedWithModifiers.ts:9:14
  │
9 │     abstract protected foo_cc();
  │     -------- ^^^^^^^^^ move this modifier
  │     │         
  │     before this modifier

error[SyntaxError]: 'private' cannot be used with 'abstract' modifier.
   ┌─ classAbstractMixedWithModifiers.ts:10:14
   │
10 │     abstract private foo_dd();
   │     -------- ^^^^^^^
   │     │         
   │     'abstract' modifier

error[SyntaxError]: 'abstract' cannot be used with 'static' modifier.
   ┌─ classAbstractMixedWithModifiers.ts:12:5
   │
12 │     abstract static foo_d();
   │     ^^^^^^^^ ------ 'static' modifier

error[SyntaxError]: 'abstract' cannot be used with 'static' modifier.
   ┌─ classAbstractMixedWithModifiers.ts:14:12
   │
14 │     static abstract foo_e();
   │     ------ ^^^^^^^^
   │     │       
   │     'static' modifier


```


